--- a/style.css
+++ b/style.css
@@ -1,19 +1,53 @@
+::-webkit-scrollbar {
+  display: none;
+}
+
+:root {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(60, 60, 60);
+}
+
 main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#main_cont {
   background-color: red;
   color: white;
   font-size: 20px;
   padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border: 10px solid black;
   transition: all 0.5s ease-in-out;
   width: 90vw;
-  height: 20vh;
+  height: 30vh;
 }
-main:hover {
+#main_cont #normal {
+  display: inline-block;
+}
+#main_cont #normal img {
+  width: 100px;
+  height: 100px;
+}
+#main_cont #hello_there {
+  display: none;
+  width: 100px;
+  height: 100px;
+}
+#main_cont:hover {
   background-color: blue;
   color: yellow;
-  font-size: 30px;
-  padding: 30px;
-  border-radius: 20px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  font-size: 5px;
+  padding: 60px;
+  padding-bottom: 200px;
+  box-shadow: 0 0 200px rgba(197, 197, 197, 0.5);
+}
+#main_cont:hover #normal {
+  display: none;
+}
+#main_cont:hover #hello_there {
+  display: inline-block;
 }/*# sourceMappingURL=style.css.map */
