Co-authored-by: Vince <namesvin@users.noreply.github.com>

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ main {
 }
 
 #main_cont {
+  box-sizing: border-box;
   background-color: red;
   color: white;
   font-size: 20px;
@@ -25,18 +26,6 @@ main {
   width: 90vw;
   height: 30vh;
 }
-#main_cont #normal {
-  display: inline-block;
-}
-#main_cont #normal img {
-  width: 100px;
-  height: 100px;
-}
-#main_cont #hello_there {
-  display: none;
-  width: 100px;
-  height: 100px;
-}
 #main_cont:hover {
   background-color: blue;
   color: yellow;
@@ -45,9 +34,26 @@ main {
   padding-bottom: 200px;
   box-shadow: 0 0 200px rgba(197, 197, 197, 0.5);
 }
-#main_cont:hover #normal {
-  display: none;
+
+#hello {
+  position: relative;
 }
-#main_cont:hover #hello_there {
-  display: inline-block;
+#hello img {
+  display: block;
+  transition: all 0.3s ease;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 1;
+  z-index: 1;
+}
+#hello img.hover {
+  opacity: 0;
+  z-index: 2;
+}
+#hello:hover img {
+  opacity: 0;
+}
+#hello:hover img.hover {
+  opacity: 1;
 }/*# sourceMappingURL=style.css.map */
