--- a/style.css
+++ b/style.css
@@ -5,7 +5,21 @@
 :root {
   width: 100vw;
   height: 100vh;
-  background-color: rgb(60, 60, 60);
+  background-color: rgb(219, 157, 216);
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10vh;
+  background-color: rgb(157, 186, 219);
+  color: white;
+  font-size: 30px;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 main {
