--- a/style.scss
+++ b/style.scss
@@ -1,61 +1,78 @@
 ::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
-:root{
-    width: 100vw;
-    height: 100vh;
-    background-color: rgb(60, 60, 60);
+:root {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(219, 157, 216);
 }
-main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10vh;
+  background-color: rgb(157, 186, 219);
+  color: white;
+  font-size: 30px;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
-#main_cont{
-    box-sizing: border-box;
-    background-color: red;
-    color: white;
-    font-size: 20px;
-    padding: 20px;
-    border: 10px solid black;
-    transition: all 0.5s ease-in-out;
-    width: 90vw;
-    height: 30vh;
-    &:hover{
-        background-color: blue;
-        color: yellow;
-        font-size: 5px;
-        padding: 60px;
-        padding-bottom: 200px;
-        box-shadow: 0 0 200px rgba(197, 197, 197, 0.5);
-    }
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#main_cont {
+  box-sizing: border-box;
+  background-color: red;
+  color: white;
+  font-size: 20px;
+  padding: 20px;
+  border: 10px solid black;
+  transition: all 0.5s ease-in-out;
+  width: 90vw;
+  height: 30vh;
+
+  &:hover {
+    background-color: blue;
+    color: yellow;
+    font-size: 5px;
+    padding: 60px;
+    padding-bottom: 200px;
+    box-shadow: 0 0 200px rgba(197, 197, 197, 0.5);
+  }
 }
 
 #hello {
-    position: relative;
-    
-    img {
-      display: block;
-      transition: all 0.3s ease;
-      position: absolute;
-      top: 0;
-      left: 0;
-      opacity: 1;
-      z-index: 1;
-      
-      &.hover {
-        opacity: 0;
-        z-index: 2;
-      }
-    }
-    
-    &:hover img {
+  position: relative;
+
+  img {
+    display: block;
+    transition: all 0.3s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 1;
+    z-index: 1;
+
+    &.hover {
       opacity: 0;
-    }
-    
-    &:hover img.hover {
-      opacity: 1;
+      z-index: 2;
     }
   }
+
+  &:hover img {
+    opacity: 0;
+  }
+
+  &:hover img.hover {
+    opacity: 1;
+  }
+}
