--- a/style.css
+++ b/style.css
@@ -57,11 +57,22 @@ header {
 }
 
 #pic_holder img {
-  height: 40vh;
+  height: 30vh;
   width: 30vw;
-  -o-object-fit: cover;
-     object-fit: cover;
   border-radius: 10px;
+}
+#pic_holder img:nth-child(1n) {
+  display: block;
+}
+#pic_holder img:nth-child(2n) {
+  display: none;
+}
+
+#pic_holder:hover img:nth-child(1n) {
+  display: none;
+}
+#pic_holder:hover img:nth-child(2n) {
+  display: block;
 }
 
 footer {
