--- a/style.css
+++ b/style.css
@@ -56,16 +56,22 @@ header {
   margin-right: 10vw;
 }
 
+#pic_holder {
+  display: flex;
+  justify-content: center;
+}
 #pic_holder img {
   height: 30vh;
-  width: 30vw;
   border-radius: 10px;
 }
 #pic_holder img:nth-child(1n) {
   display: block;
+  width: -moz-max-content;
+  width: max-content;
 }
 #pic_holder img:nth-child(2n) {
   display: none;
+  width: 30vw;
 }
 
 #pic_holder:hover img:nth-child(1n) {
