--- a/style.scss
+++ b/style.scss
@@ -25,16 +25,17 @@ header {
 }
 
 #koczkas {
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
 }
 
 .koczka_element {
   display: flex;
-  margin-top: 40px;
+  margin-top: -80px;
   height: 40vh;
   width: 30vw;
-  border: 2px solid black;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   flex-direction: column;
   justify-content: center;
