--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@
   font-size: 25px;
 }
 
+* {
+  -webkit-user-select: none; /* Safari */ /* IE 10 and IE 11 */
+  -moz-user-select: none;
+       user-select: none; /* Standard syntax */
+}
+
 header {
   display: flex;
   justify-content: center;
