--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,12 @@
   font-size: 25px;
 }
 
+*{
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+
 header {
   display: flex;
   justify-content: center;
@@ -71,6 +77,7 @@ header {
 #pic_holder {
   display: flex;
   justify-content: center;
+  
 
   img {
     height: 30vh;
