--- a/style.css
+++ b/style.css
@@ -30,19 +30,6 @@
     letter-spacing: 2px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
-  header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 10vh;
-    background-color: rgb(157, 186, 219);
-    color: white;
-    font-size: 30px;
-    font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  }
   #koczkas {
     margin-top: 100px;
     display: flex;
@@ -119,23 +106,95 @@
   }
 }
 @media screen and (max-width: 1000px) {
+  ::-webkit-scrollbar {
+    display: none;
+  }
   :root {
-    font-size: 10px;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    background-color: rgb(219, 157, 216);
+    font-family: "Roboto", sans-serif;
+    font-size: 15px;
+  }
+  * {
+    -webkit-user-select: none;
+    /* Safari */
+    /* IE 10 and IE 11 */
+    -moz-user-select: none;
+         user-select: none;
+    /* Standard syntax */
   }
   header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+    background-color: rgb(157, 186, 219);
+    color: white;
     font-size: 2vh;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
   #koczkas {
-    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
   }
   .koczka_element {
-    height: 30vh;
-    width: 40vw;
+    display: flex;
+    margin-top: 3vh;
+    height: 40vh;
+    width: 70vw;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    flex-direction: column;
+    justify-content: center;
+    padding: 1vh;
+  }
+  .koczka_element h2 {
+    align-self: center;
+  }
+  #pic_holder {
+    display: flex;
+    justify-content: center;
   }
   #pic_holder img {
-    height: 20vh;
+    height: 30vh;
+    border-radius: 10px;
+    padding-bottom: 3vh;
+  }
+  #pic_holder img:nth-child(1n) {
+    display: block;
+    width: -moz-max-content;
+    width: max-content;
+  }
+  #pic_holder img:nth-child(2n) {
+    display: none;
+    width: 70vw;
+  }
+  #pic_holder:hover img:nth-child(1n) {
+    display: none;
+  }
+  #pic_holder:hover img:nth-child(2n) {
+    display: block;
   }
   footer {
-    font-size: 25px;
+    padding-left: 1vh;
+    padding-right: 1vh;
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+    background-color: rgb(157, 186, 219);
+    color: white;
+    font-size: 1.5vh;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
 }/*# sourceMappingURL=style.css.map */
